--- a/src/styles/user.css
+++ b/src/styles/user.css
@@ -1,7 +1,8 @@
 #cont {
-  /* border: 1px solid blue; */
+  border: 1px solid black;
   width: 80%;
   margin: auto;
+  padding: 60px;
 }
 .flex {
   display: flex;
@@ -24,10 +25,10 @@
 p {
   margin-top: -2px;
 }
-form > input {
+.search-box > input {
   /* cursor: pointer; */
   width: 95%;
-  margin-top: 50px;
+  /* margin-top: 50px; */
   padding: 10px;
 }
 .table {
@@ -50,4 +51,23 @@ form > input {
 .selected {
   background-color: #ff5171;
   padding: 5px;
+  margin-top: 5px;
+  float: left;
+}
+td {
+  border: 1px solid black;
+}
+.edit-data{
+  width: 25%;
+    /* border: 1px solid black; */
+    background-color: black;
+    padding: 20px;
+    margin: auto;
+    margin-top: -90%;
+    border-radius: 5px;
+}
+.edit-data > input{
+  width: 95%;
+    margin-bottom: 10px;
+    padding: 5px;
 }
